# node-datachannel-performance-diagnostics

./: .gitignore  client-bin.js  client.ts  package-lock.json  package.json  server-bin.js  signaling-server.ts
benchmark/: README.md  init-cpp-benchmark.sh  package-lock.json  package.json  rebuild-cpp-benchmark.sh  run-cpp-measurements-at-varying-latencies.sh  run-measurement-at-latency.sh  run-measurements-at-varying-latencies.sh  throughputmeasurer.ts  tsconfig.json
benchmark/cppbenchmark/: CMakeLists.txt  helpers.h  main.cpp  parse_cl.cpp  parse_cl.h  peer.cpp  peer.h  testclient.cpp  testclient.h
benchmark/vagrant/: Vagrantfile
benchmark/vagrant/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  creator_uid  id  index_uuid  private_key  synced_folders  vagrant_cwd
repro-buffer-issue/: README.md  client.ts  create_veths.sh  delete_veth.sh  follow-high-warns.sh  kill-all-client-screens.sh  node-datachannel-throughputresults.xlsx  package-lock.json  package.json  results.csv  results2.csv  run-automatic-senders-varying-latency.sh  run-clients-in-screens.sh  run-netperf.sh  run-sender-at-latency.sh  run-signalling-in-screen.sh  run-throughput-measurer-sender.sh  run-throughput-receiver-in-veth.sh  run-throughput-sender-in-veth.sh  run_iperfs.sh  run_ping.sh  signaling-server.ts  throughputmeasurer.ts  veths-down.sh  veths-up.sh
repro-buffer-issue/iperfresults/: 1allout.txt
